added password and getUserByEmail